Set up connection string in appsettings

--- a/ClozerWoods/appsettings.Development.json
+++ b/ClozerWoods/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "MySQL": "server=localhost;database=clozerwoods;user=root;"
     }
-  }
 }
