--- a/ClozerWoods/ClozerWoods.csproj
+++ b/ClozerWoods/ClozerWoods.csproj
@@ -3,7 +3,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
+	  <UserSecretsId>0c9dfee7-2481-4efb-a651-989e9128ff5d</UserSecretsId>
+  </PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
