--- a/ClozerWoods/appsettings.json
+++ b/ClozerWoods/appsettings.json
@@ -8,5 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "MySQL": "server=localhost;database=clozerwoods"
-    }
+    },
+    "MediaFolder": "D:/temp/clozerwoods"
 }
