Add thumbnail capability. Move some garbage around

--- a/ClozerWoods/appsettings.json
+++ b/ClozerWoods/appsettings.json
@@ -9,5 +9,11 @@
     "ConnectionStrings": {
         "MySQL": "server=localhost;database=clozerwoods"
     },
-    "MediaFolder": "D:/temp/clozerwoods"
+    "MediaFolder": "D:/temp/clozerwoods",
+    "ValidMediaExtensions": [
+        ".png",
+        ".jpg",
+        ".jpeg",
+        ".gif"
+    ]
 }
