--- a/ClozerWoods/ClozerWoods.csproj
+++ b/ClozerWoods/ClozerWoods.csproj
@@ -15,5 +15,6 @@
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 </Project>
