Add thumb previews. Split selection of media items into grid

--- a/ClozerWoods/appsettings.json
+++ b/ClozerWoods/appsettings.json
@@ -9,6 +9,7 @@
     "ConnectionStrings": {
         "MySQL": "server=localhost;database=clozerwoods"
     },
+    "MediaUrl": "file://D:/temp/clozerwoods/",
     "MediaFolder": "D:/temp/clozerwoods",
     "ValidMediaExtensions": [
         ".png",
