--- a/ClozerWoods/Properties/launchSettings.json
+++ b/ClozerWoods/Properties/launchSettings.json
@@ -1,18 +1,12 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:3398",
-      "sslPort": 44303
-    }
-  },
+  "hotReloadEnabled": false,
   "profiles": {
     "ClozerWoods": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "hotReloadEnabled": false,
       "applicationUrl": "https://localhost:7011;http://localhost:5011",
       "dotnetRunMessages": true
     },
