Update some configuration stuff to get Production working

--- a/clozerwoods.service
+++ b/clozerwoods.service
@@ -1,14 +1,15 @@
 [Unit]
 Description==ASP.NET Core with Apache2
 [Service]
-WorkingDirectory=/var/www/
-ExecStart=/usr/bin/dotnet /var/www/ClozerWoods.dll
+WorkingDirectory=/var/www/clozerwoods.com/
+ExecStart=/usr/bin/dotnet /var/www/clozerwoods.com/ClozerWoods.dll
 Restart=always
 # Restart service after 10 seconds if the dotnet service crashes
 RestartSec=10
 KillSignal=SIGINT
 SyslogIdentifier=clozerwoods
 User=www-data
+EnvironmentFile=/var/www/cnf/clozerwoods_env.var
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
 [Install]
