--- a/ClozerWoods/appsettings.json
+++ b/ClozerWoods/appsettings.json
@@ -6,6 +6,8 @@
         }
     },
     "AllowedHosts": "*",
+    "MySqlServer": "localhost",
+    "MySqlDatabase": "clozerwoods",
     "MediaUrl": "file://D:/temp/clozerwoods/",
     "MediaFolder": "D:/temp/clozerwoods",
     "ValidMediaExtensions": [
