WIP on editor controls

--- a/ClozerWoods/appsettings.json
+++ b/ClozerWoods/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
     "MySqlServer": "localhost",
     "MySqlDatabase": "clozerwoods",
-    "MediaUrl": "file://D:/temp/clozerwoods/",
+    "MediaUrl": "file://D:/temp/clozerwoods",
     "MediaFolder": "D:/temp/clozerwoods",
     "ValidMediaExtensions": [
         ".png",
